# animatPlot

./: .app.py.swp  .gitignore  Lennard_Jonnes.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  dados.py  data_animate.py  erf_mp4.py  euler_method.ipynb  gamma_functions.ipynb  number_theory.ipynb  print.py  pyproject.toml  requirements.txt  setup.py  test_dados.py  test_video.py  test_wind.py  test_wind_ortho.py  testing.ipynb  time_.py
.circleci/: config.yml
.virtual_documents/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  testing.ipynb
animateplot/: __init__.py  animat_plot.py  video.py
animateplot/video/: __init__.py  exceptions_animateplot.py  video.py  video_movie.py
animatplot/: animat_plot.py
notebooks/: delta_dirac.ipynb  ensemble_canonic.ipynb  gamma_functions.ipynb  relativity specials and general.ipynb
tests/: test_render.py  test_render_gif.py  test_render_mp4.py
