[project]
name = "animateplot"
version = "0.4.3"
description = ""
authors = [
    {name = "reinanbr",email = "perseu912@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy (>=2.2.1,<3.0.0)"
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
moviepy = "^2.2.1"
matplotlib = "^3.10.6"
numpy = "2.2.2"
opencv-python = "^4.12.0.88"
packaging = "^25.0"
pillow = "^11.3.0"
proglog = "^0.1.12"
pyparsing = "^3.2.3"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.1.1"
six = "^1.17.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
